4.1.0
=====
19 December 2024
- Add support for masking input data fields

4.0.3
=====
10 December 2024
- Do not check step rules when resolving guard references in dry runs

4.0.2
=====
10 December 2024
- Resolve guard references in dry runs

4.0.1
=====
15 November 2024
- Load associative meta after common meta

4.0.0
=====
15 November 2024
- Introduce profiles to support multiple launch configurations
  - `-p|--profile` option
 - Internal engine enhancements
  - Replace redundant multi scoped data caches with one single scoped cache
  - Manage settings internally without exposing them as system properties
  - Manage implicits at lifecycle level using boundary level caching
- Require Java 17+ instead of Java 11+
- Use logback instead of log4j for logging
- Support `empty` literal in DSLs wherever `blank` is accepted
- Make all input data read only by default
- Add `--repl` option to open REPL regardless of batch and feature options
- Change ignore placeholder syntax in template matcher from `!{}` to `@{*}`
- Add `@{**}` placeholder to template matcher to support ignoring multiple lines
- Print gwen launch arguments on startup
- Synchronise system process bindings when resolving value from output stream
- Do not permit scope attribute on results file configuration when logging with annoation or DSL
- Only log results file records if results format is specified in launch options
- Skip logging to result file if the scope or status don't match
  - and disable calling step when logged via DSL
- Log unresolved field value if interpolation fails during result file logging
- Support relative file locations in `@Import` and `@Examples` annotations
- Load all associative meta if features are specified with `--repl` option
- Auto discover associative meta only
- Update dependencies
  - Update scala from v3.5.0 to v3.5.2
  - Update gherkin from v29.0.0 to v30.0.0
  - Update jline from v3.26.3 to v3.27.1
  - Update logback-core from v1.5.9 to v1.5.12