@@ -108,6 +108,14 @@ abstract class EvalEngine[T <: EvalContext] extends NodeEventDispatcher with Uni
         Some(new RepeatIfFile(doStep, operation, s"$filepathRef file does not exist", None, Some(filepathRef), FileComparisonOperator.exists, true, step.delayOpt.getOrElse(defaultRepeatDelay), step.timeoutOpt.getOrElse(defaultRepeatTimeout(defaultRepeatDelay)), this))
       case r"""(.+?)$doStep (until|while)$operation (.+? file)$filepathRef is( not)?$negation empty""" if (doStep != "I wait") =>
         Some(new RepeatIfFile(doStep, operation, s"$filepathRef ${if(Option(negation).nonEmpty) "not " else ""}empty", None, Some(filepathRef), FileComparisonOperator.empty, Option(negation).nonEmpty, step.delayOpt.getOrElse(defaultRepeatDelay), step.timeoutOpt.getOrElse(defaultRepeatTimeout(defaultRepeatDelay)), this))
+      case r"""(.+?)$doStep (until|while)$operation (.+?)$attribute is( not)?$negation (?:blank|empty)""" if (doStep != "I wait")   =>
+        Some(new RepeatIfCompareCondition(doStep, operation, attribute, ComparisonOperator.be, Option(negation).nonEmpty, "", step.isTrim, step.isIgnoreCase, step.delayOpt.getOrElse(defaultRepeatDelay), step.timeoutOpt.getOrElse(defaultRepeatTimeout(defaultRepeatDelay)), defaultConditionTimeoutSecs, this))
+      case r"""(.+?)$doStep (until|while)$operation (.+?)$attribute is( not)?$negation "(.*?)"$expression""" if (doStep != "I wait")  =>
+        Some(new RepeatIfCompareCondition(doStep, operation, attribute, ComparisonOperator.be, Option(negation).nonEmpty, expression, step.isTrim, step.isIgnoreCase, step.delayOpt.getOrElse(defaultRepeatDelay), step.timeoutOpt.getOrElse(defaultRepeatTimeout(defaultRepeatDelay)), defaultConditionTimeoutSecs, this))
+      case r"""(.+?)$doStep (until|while)$operation (.+?)$attribute (contains|starts with|ends with|matches regex|matches xpath|matches json path|matches template|matches template file)$operator "(.*?)"$expression""" if (doStep != "I wait")  =>
+        Some(new RepeatIfCompareCondition(doStep, operation, attribute, ComparisonOperator.fromModal(operator), false, expression, step.isTrim, step.isIgnoreCase, step.delayOpt.getOrElse(defaultRepeatDelay), step.timeoutOpt.getOrElse(defaultRepeatTimeout(defaultRepeatDelay)), defaultConditionTimeoutSecs, this))
+      case r"""(.+?)$doStep (until|while)$operation (.+?)$attribute does not (contain|start with|end with|match regex|match xpath|match json path|match template|match template file)$operator "(.*?)"$expression""" if (doStep != "I wait")  =>
+        Some(new RepeatIfCompareCondition(doStep, operation, attribute, ComparisonOperator.valueOf(operator), true, expression, step.isTrim, step.isIgnoreCase, step.delayOpt.getOrElse(defaultRepeatDelay), step.timeoutOpt.getOrElse(defaultRepeatTimeout(defaultRepeatDelay)), defaultConditionTimeoutSecs, this))
       case r"""(.+?)$doStep (until|while)$operation (.+?)$condition""" if (doStep != "I wait" && !condition.contains('"') && !step.expression.matches(""".*".*(until|while).*".*""")) =>
         Some(new RepeatJS(doStep, operation, condition, step.delayOpt.getOrElse(defaultRepeatDelay), step.timeoutOpt.getOrElse(defaultRepeatTimeout(defaultRepeatDelay)), defaultConditionTimeoutSecs, this))
       case _ =>
