@@ -2,6 +2,12 @@
 =====
 19 December 2024
 - Add support for masking input data fields
+- Ensure masked fields are unmasked when evaluating javascript
+- Added DSLs
+  - `<step> <while|until> <name> is[ not] <blank|empty>`
+  - `<step> <while|until> <name> is[ not] "<value>"`
+  - `<step> <while|until> <name> <match> "<expression>"`
+  - `<step> <while|until> <name> does not <match> "<expression>"`
 
 4.0.3
 =====
